--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/console.png
+    - assets/images/console_secondary.png
     - assets/images/cpu.png
+    - assets/images/cpu_secondary.png
     - assets/images/gpu.png
+    - assets/images/gpu_secondary.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
