--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
 
   flutter_spinkit: "^4.1.2"
+  animated_text_kit: ^3.0.2
 
   cupertino_icons: ^1.0.0
 
